--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Shuai Shen</name>
+                <name>Vysakh Ramakrishnan</name>
               </p>
-              <p>I am a fifth-year Ph.D. student in the Department of Automation at Tsinghua University, advised by Prof. <a href="https://scholar.google.com/citations?user=TN8uDQoAAAAJ&hl=zh-CN">Jiwen Lu</a> and Prof. <a href="https://scholar.google.com/citations?user=6a79aPwAAAAJ&hl=zh-CN">Jie Zhou</a>.
-		      Prior to that, I received my B.S. degree in the Department of Automation at Tsinghua University in 2019. 
+              <p>I am a Masters student at Plaksha University, advised by Prof. <a href="https://scholar.google.com/citations?user=TN8uDQoAAAAJ&hl=zh-CN">Jiwen Lu</a> and Prof. <a href="https://scholar.google.com/citations?user=6a79aPwAAAAJ&hl=zh-CN">Jie Zhou</a>.
+		      Prior to that, I received my B.Tech. degree in the Department of Civil Engineering at National Institute of Technology, Calicut in 2019. 
 			  </p>
-			  <p>My research interests lie in computer vision and deep learning, particularly in <b>face clustering and face synthesis</b>.
+			  <p>My research interests lie in computer vision and deep learning, particularly in <b>3D Object synthesis, Surgical AI, and vision-language models</b>.
               </p>
-              <p><strong>I anticipate graduating in June 2024, and now I am looking for a postdoctoral position. If you are interested in my research, feel free to drop me an e-mail shens19[AT]mails.tsinghua.edu.cn.</strong>
+              <p><strong>I anticipate graduating in July 2024, and now I am looking for a research position. If you are interested in my research, feel free to drop me an e-mail vysakhramkrishnan7[AT]gmail.com.</strong>
               </p>
               <p style="text-align:center">
-                <a href="mailto:shens19@mails.tsinghua.edu.cn"> Email </a> &nbsp/&nbsp  
-                <a href="https://github.com/sstzal"> GitHub </a> &nbsp/&nbsp  
-		<a href="https://scholar.google.com/citations?user=0WpC3DsAAAAJ&hl=zh-CN"> Google Scholar </a>
+                <a href="mailto:vysakhramkrishnan7@gmail.com"> Email </a> &nbsp/&nbsp  
+<!--                 <a href="https://github.com/sstzal"> GitHub </a> &nbsp/&nbsp   -->
+<!-- 		<a href="https://scholar.google.com/citations?user=0WpC3DsAAAAJ&hl=zh-CN"> Google Scholar </a> -->
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
