--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <!-- 		<a href="https://scholar.google.com/citations?user=0WpC3DsAAAAJ&hl=zh-CN"> Google Scholar </a> -->
               </p>
             </td>
-            <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="images/shenshuai1.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/shenshuai_circle.png" class="hoverZoomLink"></a>
+<!--             <td style="padding:2.5%;width:30%;max-width:30%">
+<!--               <a href="images/shenshuai1.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/shenshuai_circle.png" class="hoverZoomLink"></a> -->
             </td>
           </tr>
         </tbody></table>
@@ -284,7 +284,7 @@
        
       </td>
     </tr>
-  </table>
+  </table> -->
 </body>
 
 </html>
