--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </tbody></table>
 		
 		
-		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+<!-- 		<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
@@ -92,8 +92,8 @@
             <td width="75%" valign="center">
               <papertitle>STAR-FC: Structure-Aware Face Clustering on Ultra-Large-Scale Graphs</papertitle>
               <br>
-		<strong>Shuai Shen</strong>, Wanhua Li, Zheng Zhu, Jie Zhou, and Jiwen Lu
-              <br>
+		<strong>Shuai Shen</strong>, Wanhua Li, Zheng Zhu, Jie Zhou, and Jiwen Lu -->
+<!--               <br>
               <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</em>, 2023
 			  <br>
               <a href="https://ieeexplore.ieee.org/abstract/document/10195951">[PDF]</a> 
@@ -284,7 +284,7 @@
        
       </td>
     </tr>
-  </table> -->
+  </table> --> -->
 </body>
 
 </html>
