--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
               <p style="text-align:center">
                 <name>Vysakh Ramakrishnan</name>
               </p>
-              <p>I am a Masters student at Plaksha University, advised by Prof. <a href="https://scholar.google.com/citations?user=TN8uDQoAAAAJ&hl=zh-CN">Jiwen Lu</a> and Prof. <a href="https://scholar.google.com/citations?user=6a79aPwAAAAJ&hl=zh-CN">Jie Zhou</a>.
+<!--               <p>I am a Masters student at Plaksha University, advised by Prof. <a href="https://scholar.google.com/citations?user=TN8uDQoAAAAJ&hl=zh-CN">Jiwen Lu</a> and Prof. <a href="https://scholar.google.com/citations?user=6a79aPwAAAAJ&hl=zh-CN">Jie Zhou</a>.
 		      Prior to that, I received my B.Tech. degree in the Department of Civil Engineering at National Institute of Technology, Calicut in 2019. 
 			  </p>
 			  <p>My research interests lie in computer vision and deep learning, particularly in <b>3D Object synthesis, Surgical AI, and vision-language models</b>.
-              </p>
+              </p> -->
               <p><strong>I anticipate graduating in July 2024, and now I am looking for a research position. If you are interested in my research, feel free to drop me an e-mail vysakhramkrishnan7[AT]gmail.com.</strong>
               </p>
               <p style="text-align:center">
